--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,13 @@
-<p>home works!</p>
+<mat-toolbar class="toolbar content-logo">
+    <a> <img class="logo" src="assets/img/logo-Interbank.svg" alt=""></a>
+</mat-toolbar>
+<mat-toolbar class="toolbar nav">
+    <p> <span>AVIwatcher</span></p>
+    <div class="button-container">
+        <button mat-button color="primary">RESTAURAR</button>
+    </div>
+    <div class="example-section">
+        <mat-checkbox class="example-margin">Checked</mat-checkbox>
+        <mat-checkbox class="example-margin">Indeterminate</mat-checkbox>
+    </div>
+</mat-toolbar>
