--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -11,4 +11,22 @@
 
 .nav {
     background: #F3F9FD;
+    p {
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 25px;
+        display: flex;
+        align-items: center;
+        color: #00BB31;
+        margin: 0;
+    }
+    .button-container {
+        button {
+            background: transparent;
+            border-radius: 4px;
+            border: 2px solid #3f51b5;
+        }
+    }
 }
