--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,3 +1,4 @@
+@import '../../assets/scss/layout/utils';
 .content-logo {
     background: white;
     a {
@@ -24,9 +25,22 @@
     }
     .button-container {
         button {
-            background: transparent;
+            background: #0033A1;
             border-radius: 4px;
-            border: 2px solid #3f51b5;
+            border: 2px solid #0033A1;
+            height: 32px;
+            color: white;
+            font-size: 12px;
+            align-items: center;
+            display: flex;
         }
+    }
+    .section-checkbox {
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 14px;
+        align-items: center;
+        color: #000000;
     }
 }
