--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,24 +1,69 @@
-<mat-toolbar class="toolbar content-logo">
-    <a> <img class="logo" src="assets/img/logo-Interbank.svg" alt=""></a>
-</mat-toolbar>
-<mat-toolbar class="toolbar nav">
-    <p class="m-0"> <span>AVIwatcher</span></p>
-    <div class="button-container ml-16 mr-16">
-        <button mat-button color="primary">RESTAURAR</button>
+<div style="box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); position: relative;">
+    <mat-toolbar class="toolbar content-logo">
+        <a> <img class="logo" src="assets/img/logo-Interbank.svg" alt=""></a>
+    </mat-toolbar>
+    <div class="toolbar nav pl-16 pr-16 row">
+        <div class="col-2 flex-class ai-center ">
+            <p class="m-0"> <span>AVIwatcher</span></p>
+            <div class="button-container ml-16 mr-16">
+                <button mat-button color="primary">RESTAURAR</button>
+            </div>
+
+        </div>
+        <div>
+            <form id="contactForm" [formGroup]="formNav" class="col-10 flex-class ai-center ">
+                <div class="section-checkbox">
+                    <mat-checkbox class="example-margin ml-16 mr-12" formControlName="web">WEB</mat-checkbox>
+                    <mat-checkbox class="example-margin " formControlName="app">APP</mat-checkbox>
+                </div>
+                <div class="flex-class m-16 ai-center">
+
+                    <div class="mr-8" style="text-align: center; display: flex">
+                        <mat-label style="font-size: 14px; ;">Ambiente :</mat-label>
+                    </div>
+                    <mat-form-field appearance="outline" style="width: 110px;">
+                        <mat-select (selectionChange)="capturar($event)" placeholder="seleccionar" formControlName="ambiente">
+                            <mat-option *ngFor="let items of ambientes" [value]="items" style="font-size: 14px;">
+                                {{items}}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </div>
+                <div class="flex-class m-16 ai-center">
+
+                    <div class="mr-8" style="text-align: center; display: flex">
+                        <mat-label style="font-size: 14px; ;">Bot :</mat-label>
+                    </div>
+                    <mat-form-field appearance="outline" style="width: 110px;">
+                        <mat-select (selectionChange)="capturar($event)" placeholder="seleccionar">
+                            <mat-option *ngFor="let items of data" [value]="items" style="font-size: 14px;">
+                                {{items.name}}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </div>
+                <div class="flex-class m-16 ai-center">
+
+                    <div class="mr-8" style="text-align: center; display: flex">
+                        <mat-label style="font-size: 14px; ;">Identificador :</mat-label>
+                    </div>
+                    <div class="flex-class content-input">
+                        <input class="input-id" type="tel" matInput placeholder="+51">
+                        <input class="input-num" type="tel" matInput placeholder="Ingresa número">
+                    </div>
+
+                </div>
+                <div class="button-container">
+                    <button mat-button color="primary">LIMPIAR</button>
+                </div>
+            </form>
+        </div>
     </div>
-    <div class="section-checkbox">
-        <mat-checkbox class="example-margin ml-16 mr-12">WEB</mat-checkbox>
-        <mat-checkbox class="example-margin ">APP</mat-checkbox>
+</div>
+<div style="display: flex;height: calc( 100vh - 137.100px); ">
+    <div style="background: #F3F9FD; width: 23%;"> codigo a mostrar</div>
+    <div style="width: 77%; ">
+        <app-chat></app-chat>
     </div>
-    <div class="flex-class">
-        <p>Ambiente:</p>
-        <mat-form-field appearance="fill">
-            <mat-label>Ambiente</mat-label>
-            <mat-select (selectionChange)="capturar($event)">
-                <mat-option *ngFor="let items of ambientes" [value]="items">
-                    {{items}}
-                </mat-option>
-            </mat-select>
-        </mat-form-field>
-    </div>
-</mat-toolbar>
+
+</div>
