--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -10,7 +10,7 @@
                 <input class="input-num pt-8 pb-8" matInput placeholder="Escribe un mensaje">
             </div>
             <div>
-                <button id="btnEnviarFormulario" class="btn btn-send" (click)="sendFormulario()">
+                <button id="btnEnviarFormulario" class="btn btn-send" (click)="sendFormulario($event)">
           <mat-icon>send</mat-icon>
         </button>
             </div>
