--- a/src/app/chat/chat.component.scss
+++ b/src/app/chat/chat.component.scss
@@ -26,6 +26,13 @@
     display: flex;
 }
 
+.btn-send-text {
+    border: none;
+    color: #00BB31;
+    text-align: center;
+    display: flex;
+}
+
 .button-container {
     button {
         background: #0033A1;
