--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,21 +1,47 @@
 @import '../../assets/scss/layout/utils';
-.content-logo {
-    background: white;
-    a {
-        display: flex;
-        img {
-            max-width: 8rem;
-            height: auto;
+.ng-content {
+    display: flex;
+    height: 100vh;
+    width: 100vw;
+    overflow-y: hidden;
+    .section-1 {
+        box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+        position: relative;
+        width: 250px;
+        .content-json {
+            background: transparent;
+            height: 100%;
+        }
+        .content-nav {
+            box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+        }
+    }
+    .section-2 {
+        border-left: 1px solid #D9DADB;
+        height: 73px;
+        .content-form {
+            box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+            position: relative;
+            .label-env {
+                text-align: center;
+                display: flex;
+                white-space: nowrap;
+                mat-label {
+                    font-size: 14px;
+                }
+            }
         }
     }
 }
 
 .nav {
     background: #F3F9FD;
+    height: 73px;
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     text-align: center;
     align-items: center;
+    justify-content: space-between;
     p {
         font-family: Roboto;
         font-style: normal;
@@ -43,7 +69,7 @@
         font-family: Roboto;
         font-style: normal;
         font-weight: normal;
-        font-size: 14px;
+        font-size: 10px;
         align-items: center;
         color: #000000;
     }
@@ -76,11 +102,12 @@
         box-sizing: border-box;
     }
     .input-id {
-        max-width: 35px;
+        min-width: 35px;
+        max-width: 40px;
         border-radius: 4px 0 0 4px;
     }
     .input-num {
-        max-width: 110px;
+        min-width: 110px;
         border-radius: 0 4px 4px 0;
     }
 }
