imtegracion con servicio en duro?

--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,16 +1,70 @@
 <div class="chatlist" #chatlist>
     <form [formGroup]="form">
         <div class="msg_card_body">
-        </div>
+            <div class="ta-c content">
+                <!-- Bienvenia del Bot-->
+                <div class="header-titles">
+                    <div>Texto</div>
+                    <div>Código</div>
+                    <div>Confianza</div>
+                    <div>Flujo</div>
+                    <div>Texto técnico</div>
+                    <div>Botones</div>
+                </div>
+                <div class="p-16 body" *ngIf="dataResponseJson" #scrollMe [scrollTop]="scrollMe.scrollHeight">
+                    <div *ngFor="let value of dataResponseJson">
+                        <div class="flex-class jc-fe contentWelcome ">
+                            <div #messageitem class="mensaje-user mb-2 mr-16">
+                                {{value.text}}
+                            </div>
+                        </div>
+                        <div *ngFor="let items of value.answers" class=" content-response jc-fs">
+                            <div class="flex-class ">
+                                <div class="mensaje-bot mb-2v  mb-2">
+                                    {{items.text}}
+                                </div>
+                            </div>
+                            <div class="variables-response">
+                                <div class="flex-class ta-c jc-center">
+                                    <div class="mensaje-response-bot mb-2v  mb-2">
+                                        {{items.code}}
+                                    </div>
+                                </div>
 
+                                <div class="flex-class ta-c jc-center">
+                                    <div class="mensaje-response-bot mb-2v flex-class mb-2">
+                                        {{items.confidence | number : '1.2-2'}}
+                                    </div>
+                                </div>
+                                <div class="flex-class ta-c jc-center">
+                                    <div class="mensaje-response-bot mb-2v flex-class mb-2">
+                                        {{items.flow}}
+                                    </div>
+                                </div>
+                                <div class="flex-class ta-c jc-center">
+                                    <div class="mensaje-response-bot mb-2v flex-class mb-2">
+                                        {{items.technicalText}}
+                                    </div>
+                                </div>
+                                <div class="flex-class ta-c jc-center">
+                                    <div class="mensaje-response-bot mb-2v flex-class mb-2">
+                                        {{items.options}}
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <footer class="flex-class content-msj pt-8 pb-8 pl-16 pr-16">
-            <mat-icon class="mr-16">tag_faces</mat-icon>
-            <mat-icon class="mr-16">attach_file</mat-icon>
+            <mat-icon class="mr-16 icon">tag_faces</mat-icon>
+            <mat-icon class="mr-16 icon">attach_file</mat-icon>
             <div class="input-text">
-                <input class="input-num pt-8 pb-8" matInput placeholder="Escribe un mensaje" autocomplete="off">
+                <input class="input-num pt-8 pb-8" matInput placeholder="Escribe un mensaje" formControlName="textInput" [(ngModel)]="message" autocomplete="off">
             </div>
             <div>
-                <button id="btnEnviarFormulario" class="btn " (click)="sendFormulario($event)" [ngClass]="form.invalid ? 'btn-send' : 'btn-send-text'" formControlName="textInput">
+                <button id="btnEnviarFormulario" (click)="sendFormulario(message)" [ngClass]="form.invalid ? 'btn-send' : 'btn-send-text'" [disabled]="form.invalid">
           <mat-icon>send</mat-icon>
         </button>
             </div>
@@ -18,6 +72,5 @@
                 <button mat-button color="primary">EXPORTAR</button>
             </div>
         </footer>
-
     </form>
 </div>
