--- a/src/app/dialog/login/login.component.scss
+++ b/src/app/dialog/login/login.component.scss
@@ -1,3 +1,5 @@
+@import '../../assets/scss/layout/utils';
+@import '../../assets/scss/colors';
 .form {
     padding-top: 100px;
     padding-bottom: 100px;
@@ -37,7 +39,7 @@
     border-radius: 45px;
     width: 200px;
     background-color: #7839d8;
-    color: #ffffff;
+    color: $primary-white;
     font-weight: 600;
     border: 2px solid transparent;
     padding: 10px 31px;
