--- a/src/assets/scss/_colors.scss
+++ b/src/assets/scss/_colors.scss
@@ -1,117 +1,54 @@
-$c-red: red;
-$c-blue: #F3F9FD;
-$c-blue-05: rgba(0, 169, 224, 0.5);
-$c-skyblue: skyblue;
-$c-green: #5bc500;
-$c-auxiliar: #5bc500;
-$c-green-05: rgba(91, 197, 0, 0.5);
-$c-green-06: rgba(91, 197, 0, 0.6);
-$c-peru: peru;
-$c-orange: orange;
-$c-yellow: yellow;
-$c-purple: #A13EA1;
-$c-purple-light:#B481B6;
-$c-indigo: indigo;
-$c-pink: pink;
-$c-white: white;
-$c-black: black;
-$c-ambar: #f49c01;
-$c-melon: #FF374A;
-$c-table-header: #f4f6fb;
-$c-table-row: #f8f9fa;
-$c-plateDark:#898989;
-$c-skyblue-1: #00a9e0;
-$c-skyblue-2: #cceef9;
-// $c-bg-body: #f6f8f9;
-$c-bg-body: #F5F6FA;
-// $c-gray-item-menu: #f6f8f9;
-$c-gray-item-menu: #F5F6FA;
-$c-gray-item-menu-active: #ffffff;
-$c-gray-500: #e9eff4;
-$c-gray-1: rgb(134, 136, 140);
-$c-gray-light: #c2c2c2;
-$c-gray-light2: #515359;
-$c-gray-dark: #50535a;
-$c-blue-dark: #003245;
-$c-blue-ligth: #01B1E3;
-$c-gray-telefonica: #50535a;
-$c-dark: #323131;
-$c-gray-400: #525252;
-$c-gray-100: #d1d1d1;
-$c-gray-title: #515359;
-$c-orange-dark: #ff7b00;
-$c-green-lemon: #5bc500;
-$c-green-movistar: #57c700;
-$c-skyblue-dark: #2f9cb3;
-$c-purple-1: #8c4f94;
-$c-border-bottom-form: #e9eae8;
-$c-menu-color-item: #50535a;
-$c-button-search-color: #3b3b3b;
-$c-panel-filter-bg: #ffffff;
-$c-checkbox-border: #888888;
-$c-bg-header-start: #005b83;
-$c-bg-header-end: #5bc6da;
-$c-bg-sidebar: white;
-$c-sidebar-item-color: #515359;
-$c-sidebar-item-color-active: #2593b5;
-$c-sidebar-item-bg-hover: #f5f7f8;
-$c-sidebar-item-bg-active: #f3f5f6;
-$c-blue-row-before: #2593b5;
-$c-button-purple-bg-start: #980098;
-$c-button-purple-bg-end: #ce0ece;
-$c-button-purple-color: #ffffff !important;
-$c-button-gray-light: #86888C;
-$c-button-filter-bg-start: #3296b3;
-$c-button-filter-bg-end: #5bc6da;
-$c-button-filter-color: #ffffff !important;
-$c-table-thead-th-color: #50535a;
-$c-table-thead-th-button-border: #a8d4e1;
-$c-table-thead-th-button-color: #2593b5;
-$c-table-thead-th-button-background: #ffffff;
-$c-table-thead-th-pagination-item-hover: #f8f8f8;
-$c-table-tbody-td-color: #50535a;
-$c-table-tfoot-color: #7f8fa4;
-$c-button-icon-bg: #e4e4e4;
-$c-button-icon-border: #979797;
-$c-login-validations: #b6b7b7;
-$c-button-step-disabled-start: #bfbfbf;
-$c-button-step-disabled-end: #c9c9c9;
-$c-tab-border-bottom: rgba(37, 147, 181, 0.2);
-$c-form_field_color: #50535a;
-$c-form_field_border_bottom_color: #d4d3d4;
-$c-step-base-color: #d3d4d3;
-$c-step-base-color-active: #5ac5d9;
-$c-step-base-color-active-strong: #3296b3;
-$c-step-base-file: rgba(90, 197, 217, 0.4);
-$c-step-base-file-hover: rgba(90, 197, 217, 1);
-$c-gradient-start: #5ac4d9;
-$c-gradient-end: #5ac4d9;
-$c-gradient-end-aux: #309db4;
-$c-error-retention: #50535A;
-$c-error: #f44336;
-$c-error-400: #e9426d;
-$c-warrning: #F59C00;
-$c-gray-select: #757575;
-$c-input: #2A2A3C;
-$c-button-disabled-start: #bfbfbf;
-$c-button-disabled-end: #c9c9c9;
-$c-boton-primario-color-texto-line: #5bc500;
-$c-boton-primario-degradado-c1: #3296b3;
-$c-boton-primario-degradado-c2: #5bc6da;
-$c-boton-acentuado-degradado-c1: #980098;
-$c-boton-acentuado-degradado-c2: #c90cc9;
-// $c-button-disabled-default: #c8c8c9;
-$c-button-disabled-default: rgba(91, 197, 0, .6);
-$c-button-disabled-default3:rgba(90, 197, 217, 1);
-$c-button-disabled-default2:#5bc500;
-$c-button-secondary: #2e93b5;
-$c-card-color-text: #50535a;
-
-/*****************NEW FORMAT****************/
-
-$color-gray: #d3d4d3;
-$c-gray-560: rgb(245, 246, 250);
-$c-turquoise: #2593b5;
-$c-turquoise-p10: #2593b51a;
-
-/* FONTS */
+//GREEN
+$primary-green:#00bb31;
+$secondary-green:#37CB73;
+$tertiary-green:#69D896;
+$quaternary-green:#9BE5B9;
+$quinary-green:#CDF2DC;
+//BLUE
+$primary-blue:#0039A6;
+$secondary-blue:#3361B8;
+$tertiary-blue:#6688CA;
+$quaternary-blue:#99B0DB;
+$quinary-blue:#CCD7ED;
+//GREY DARK
+$primary-grey-dark:#0F191E;
+$secondary-grey-dark:#878C8F;
+$tertiary-grey-dark:#B7BABC;
+$quaternary-grey-dark:#D9DADB;
+$quinary-grey-dark:#ECEDED;
+$senary-grey-dark:#FBFBFB;
+//WHITE
+$primary-white:#FFFFFF;
+//BEIGE
+$primary-beige:#F0F0DC;
+$secondary-beige:#F3F3E3;
+$tertiary-beige:#F6F6EA;
+$quaternary-beige:#F9F9F1;
+$quinary-beige:#FCFCF8;
+//YELLOW (Otro uso de este color es para fondos en mensaje destacado del home)
+$primary-yellow:#FFCD00;
+$secondary-yellow:#FFD733;
+$tertiary-yellow:#FFE166;
+$quaternary-yellow:#FFEB99;
+$quinary-yellow:#FFF5CC;
+//WATERMELON (Otro uso de este color es para los mensajes de error) 
+$primary-watermelon:#EB0046;
+$secondary-watermelon:#EF336B;
+$tertiary-watermelon:#F36690;
+$quaternary-watermelon:#F799B5;
+$quinary-watermelon:#FBCCDA;
+//LIGHT BLUE (Otro uso de este color es para fondos en el Centro de Ayuda)
+$primary-light-blue:#64B4E6;
+$secondary-light-blue:#83C3EB;
+$tertiary-light-blue:#A2D2F0;
+$quaternary-light-blue:#C1E1F5;
+$quinary-light-blue:#E0F0FA;
+//DRAK BLUE
+$primary-drak-blue:#001E5F;
+$secondary-drak-blue:#334B7F;
+$tertiary-drak-blue:#66789F;
+$quaternary-drak-blue:#99A5BF;
+$quinary-drak-blue:#CCD2DF;
+//ORANGE  (Uso exclusivo para tonos de piel en las ilustraciones) 
+$primary-orange:#F99100;
+$secondary-orange:#FABE64;
