--- a/src/assets/scss/layout/_utils.scss
+++ b/src/assets/scss/layout/_utils.scss
@@ -10,33 +10,12 @@ $spaceamounts: (-110, -76, -60, -50, -40, -20, -19, -18, -17, -15, -12, -10, -7,
     height: 100%;
 }
 
+.vw-100 {
+    width: 100%;
+}
+
 .flex-class {
     display: flex!important;
-}
-
-.morado {
-    color: #954b97;
-}
-
-.casi-black {
-    color: #454647;
-    ;
-}
-
-.casi-black-2 {
-    color: #50535a;
-}
-
-.casi-black-3 {
-    color: #86888c;
-}
-
-.black-3 {
-    color: #090b0f!important;
-}
-
-.disabled {
-    opacity: 0.5;
 }
 
 //Margin
@@ -126,6 +105,10 @@ $spaceamounts: (-110, -76, -60, -50, -40, -20, -19, -18, -17, -15, -12, -10, -7,
     text-align: right;
 }
 
+.ta-s {
+    text-align: start;
+}
+
 .ta-l {
     text-align: left;
 }
@@ -169,95 +152,30 @@ $spaceamounts1: ( 1, 2, 3, 4, 5, 6, 7, 8, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19
     }
 }
 
-//dasdas
-.dis-blk {
-    display: block!important;
-}
-
-.position-buttom {
-    bottom: 0px;
-    position: absolute;
-    width: 100%;
-}
-
 //scroll-verticall
 .scroll-v {
     overflow-y: scroll;
 }
 
-ion-toast.info {
-    font-weight: 14px;
-    --border-radius: 20px;
-    --border-width: 5px;
-    --border-style: double;
-    --border-color: var(--ion-color-info);
+.w-space {
+    white-space: nowrap;
 }
 
-.toast-wrapper {
-    padding-bottom: 53px;
-    margin-left: -10px;
-    margin-right: -9px;
-}
-
-.testing {
-    padding-left: 16px;
-    padding-right: 16px;
-    padding-top: 20px;
-    padding-bottom: 40px;
-}
-
-.testing2 {
-    padding-left: 16px;
-    padding-right: 16px;
-    padding-top: 50%;
-    padding-bottom: 35%;
-}
-
-@media (max-height: 568px) {
-    .testing2 {
-        padding-left: 16px;
-        padding-right: 16px;
-        padding-top: 50%;
-        padding-bottom: 30%;
+@-moz-keyframes spin {
+    100% {
+        -moz-transform: rotate(360deg);
     }
 }
 
-@media (min-height: 569px) and (max-height: 640px) {
-    .testing2 {
-        padding-left: 15px;
-        padding-right: 15px;
-        padding-top: 50%;
-        padding-bottom: 40%;
+@-webkit-keyframes spin {
+    100% {
+        -webkit-transform: rotate(360deg);
     }
 }
 
-@media (min-height: 641px) and (max-height: 736px) {
-    .testing2 {
-        padding-left: 15px;
-        padding-right: 15px;
-        padding-top: 50%;
-        padding-bottom: 50%;
+@keyframes spin {
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
     }
-}
-
-@media (min-height: 737px) and (max-height: 812px) {
-    .testing2 {
-        padding-left: 15px;
-        padding-right: 15px;
-        padding-top: 50%;
-        padding-bottom: 50%;
-    }
-}
-
-.hr-big {
-    height: 1px;
-    background-color: #f1f1f5;
-    margin: 0px;
-}
-
-.sc-ion-popover-ios-h {
-    --width: 200px;
-    --max-height: 90%;
-    --box-shadow: none;
-    --box-shadow: 0 -1px 4px 0 rgba(72, 72, 72, 0.3);
 }
